src/test/resources/de/monticore/umlcd4a/cocos/mcg/valid/C4A53.cd
/* (c) https://github.com/MontiCore/monticore */

package de.monticore.umlcd4a.cocos.mcg.valid;

classdiagram C4A53 {
  public class A;

  protected class B;
  
  private class C;
  
  class D;
}
