src/test/resources/de/monticore/umlcd4a/cocos/mcg/invalid/C4A55.cd
/* (c) https://github.com/MontiCore/monticore */

package de.monticore.umlcd4a.cocos.mcg.invalid;

classdiagram C4A55 {
  abstract enum A;
  derived enum B;
  / enum C;
  final enum D;
  private enum E;
  protected enum F;
  static enum G;
}
